# face-recognition

./: .gitignore  Dockerfile  README.MD  cloudbuild.yaml  docker-compose.yml  face_recognition_funcs.py  gunicorn.conf.py  main.py  pyproject.toml
