[tool.poetry]
name = "face-recognition"
version = "0.1.0"
description = ""
authors = ["GalFridman <gal@storemaven.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.4"
jupyter = "^1.0.0"
plotly = "^5.8.0"
matplotlib = "^3.5.2"
requests = "^2.27.1"
tqdm = "^4.64.0"
kaleido = "0.2.1"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
pip = "^22.1.2"
install = "^1.3.5"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

